--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,9 @@ security:
             security: false
         main:
             anonymous: true
+            stateless: true
+            json_login:
+                check_path: /account/login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -26,5 +29,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/account, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/users, roles: ROLE_ADMIN }
+        - { path: ^/groups, roles: ROLE_ADMIN }
