Implemented JWT authorization

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,9 @@ security:
             stateless: true
             json_login:
                 check_path: /account/login
+            guard:
+                authenticators:
+                    - App\Security\JwtTokenAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
