--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.6",
         "firebase/php-jwt": "^5.0",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/apache-pack": "^1.0",
@@ -15,6 +16,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer": "4.3.*",
+        "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
